работает но не сохраняет

--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,16 @@
             <groupId>org.liquibase</groupId>
             <artifactId>liquibase-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.6.15.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>net.bytebuddy</groupId>
+            <artifactId>byte-buddy</artifactId>
+            <version>1.11.18</version>
+        </dependency>
 
         <dependency>
             <groupId>com.mysql</groupId>
